# saul

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
saul/: __init__.py  __main__.py  cli.py  exceptions.py  license.py  py.typed
saul/config/: __init__.py  parser.py
saul/license/: __init__.py  generator.py  parser.py
saul/license_templates/: 0bsd.toml  agpl-3.0.toml  bsd-2-clause.toml  bsd-3-clause-clear.toml  bsd-3-clause.toml  bsd-4-clause.toml  gpl-2.0.toml  gpl-3.0.toml  isc.toml  lgpl-2.1.toml  lgpl-3.0.toml  mit-0.toml  mit.toml  ncsa.toml  ofl-1.1.toml  postgresql.toml  upl-1.0.toml  zlib.toml
saul/licenses/: agpl-3.0.toml  gpl-3.0.toml
tests/: conftest.py  test_cli.py
tests/cli/: conftest.py  test_cli.py
tests/config/parser/: conftest.py  test_file_config.py  test_interactive_config.py
tests/license/: conftest.py  test_basic_license.py  test_invalid_licenses.py
tests/license/generator/: conftest.py  test_license_generator_basic_license.py  test_license_generator_invalid_license_file.py
tests/license/invalid_toml/: invalid.toml
tests/license/parser/: test_license_parser_basic_license.py  test_license_parser_input_string_not_in_body.py  test_license_parser_invalid_input_element.py  test_license_parser_invalid_project_dir.py  test_license_parser_invalid_schema.py  test_license_parser_invalid_toml.py
tests/license/test_basic_license/: test-license-1.0.toml
tests/license/test_invalid_licenses/: body-wrong-type.toml  (+14 more)
(+11 files in other folders)
